# DJ

./: =0.3.0  CONTRIBUTING.md  FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PYAUDIO_ASIO_IMPLEMENTATION.md  README.md  ai_dj_assistant.py  audio_effects.py  beat_detection.py  demo_ai_features.py  demo_features.py  demo_gui.py  demo_pyaudio_asio.py  device_routing.py  dj_cli.py  dj_gui.py  dj_mixer.py  enhanced_mixer.py  example.py  gui_demo.html  midi_controller.py  playlist_manager.py  pyaudio_mixer.py  pyproject.toml  recording.py  requirements-dev.txt  requirements.txt  setup.py  show_ai_gui_layout.py  take_ai_screenshot.py  take_screenshot.py  test_ai_assistant.py  test_cli.py  test_enhanced_mixer_pyaudio.py  test_features.py  test_gui.py  test_mixer.py  test_pyaudio_mixer.py  test_pytest.py  waveform_display.py  (+1 more)
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
web/templates/: index.html
